--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -3,7 +3,7 @@
 
 <h2>本文</h2>
 <p><%= @list.body %></p>
-<%= link_to "編集" , edit_list_path(@list.id) %>
+
 
 <H2>画像</H2>
 <% if @list.image.attached? %>
@@ -13,3 +13,4 @@
 <% end %>
 
 <%= link_to "編集" , edit_list_path(@list.id) %>
+<%= link_to "削除" , list_path(@list.id), method: :delete, "deta-confirm" => "本当に削除しますか？" %>
